# get

./: .envrc  .pre-commit-config.yaml  LICENSE  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
src/: mangadex.py  util.py
src/podcasts/: opml.py  rss.py
