[build-system]
requires = ["setuptools>=40.2.0", "wheel"]
build-backend = "setuptools.build_meta"

# TODO: https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html#declarative-config

[tool.black]
# File filtering is taken care of in pre-commit.
line-length=88
target-version=['py38']

[tool.isort]
# These are the recommended settings for black compat.
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
